Use old HttpURLConnection to be able to build in java 8.