@@ -4,13 +4,12 @@ import org.icpc.tools.contest.model.feed.JSONParser;
 import org.icpc.tools.contest.model.feed.JSONParser.JsonObject;
 import org.icpc.tools.contest.model.internal.Organization;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.net.URLEncoder;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 
 /**
@@ -18,8 +17,6 @@ import java.nio.charset.StandardCharsets;
  */
 public class GoogleMapsGeocoder {
 	private final String apiKey;
-
-	private static final HttpClient httpClient = HttpClient.newBuilder().build();
 
 	public GoogleMapsGeocoder(String apiKey) {
 		this.apiKey = apiKey;
@@ -30,16 +27,24 @@ public class GoogleMapsGeocoder {
 		String fullUrl = "https://maps.googleapis.com/maps/api/geocode/json?address=" + address + "&key=" + apiKey;
 
 		try {
-			HttpRequest request = HttpRequest.newBuilder(new URI(fullUrl))
-					.header("Accept", "application/json")
-					.build();
+			HttpURLConnection conn = (HttpURLConnection) (new URL(fullUrl)).openConnection();
+			conn.setRequestProperty("Accept", "application/json");
+			conn.setRequestMethod("GET");
 
-			HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-
-			if (response.statusCode() != 200)
+			if (conn.getResponseCode() != 200)
 				return;
 
-			JsonObject json = (new JSONParser(response.body())).readObject();
+			BufferedReader in = new BufferedReader(
+					new InputStreamReader(conn.getInputStream()));
+			String inputLine;
+			StringBuilder content = new StringBuilder();
+			while ((inputLine = in.readLine()) != null) {
+				content.append(inputLine);
+			}
+			in.close();
+			conn.disconnect();
+
+			JsonObject json = (new JSONParser(content.toString())).readObject();
 
 			if (!json.containsKey("results")) {
 				return;
@@ -61,7 +66,7 @@ public class GoogleMapsGeocoder {
 			obj.props.put("latitude", lat);
 			obj.props.put("longitude", lon);
 			org.add("location", obj);
-		} catch (URISyntaxException | IOException | InterruptedException | IllegalArgumentException e) {
+		} catch (IOException | IllegalArgumentException e) {
 			e.printStackTrace();
 		}
 	}
